<resources>
    <string name="app_name">Jolie Cafe</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_cart">Cart</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="sing_in">SIGN IN</string>
    <string name="intro_forgot_password">No worries! Enter your email address and we\'ll help you reset your password.</string>

    <string name="facebook_app_id">535573224495202</string>
    <string name="fb_login_protocol_scheme">fb535573224495202</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_out">Sign out</string>
    <string name="title_profile">Profile</string>
    <string name="order">order</string>
    <string name="edit">Edit</string>
    <string name="tea">Tea</string>
    <string name="coffee">Coffee</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="havent_add_anything">You haven\'t added anything yet.</string>
    <string name="item_name">Latte</string>
    <string name="item_price">90,0000 VND</string>
    <string name="item_favorite">5</string>
    <string name="dot_center_vertical">•</string>
    <string name="favorite_screen_title">Favorite</string>
    <string name="shipping_information">Shipping information</string>
    <string name="change">Change</string>
    <string name="product">Product</string>
    <string name="voucher">Voucher</string>
    <string name="checkout">Checkout</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit card</string>
    <string name="summary">Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_fee">Shipping fee</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="cancel">Cancel</string>
    <string name="jolie_coin">Jolie Coin</string>
    <string name="settings">Settings</string>
    <string name="order_history">Order history</string>
    <string name="address_book">Address book</string>
    <string name="profile">Profile</string>
    <string name="sweet_latte">Sweet Latte</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action">Action</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="address">Address</string>
    <string name="set_as_default_address">Set as default address</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="add_new_address">Add new address</string>
    <string name="delete_address">Delete address?</string>
    <string name="delete_address_item_text_body">Do you really want to delete this address?</string>
    <string name="current_password">Current password</string>
    <string name="quantity">Quantity:</string>
    <string name="quantity_checkout">Quantity: %1$d</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="test_notification">Keep your readers updated. Always. No one wants to be the last one to know some No worries! Enter your email address and we\'ll help you reset your password.</string>
    <string name="use_jolie_coin">Use %1$d Jolie Coin</string>
    <string name="your_order_is_on_the_way">Your order is on the way!</string>
    <string name="enter_a_voucher">Enter a voucher…</string>
    <string name="apply">APPLY</string>
    <string name="free_ship">Freeship</string>
    <string name="back">Back</string>
    <string name="distance">Distance</string>
    <string name="distance_left">%1$dm left</string>
    <string name="time_estimate">Time (estimate)</string>
    <string name="time_left">%1$d minutes left</string>
    <string name="suggestion">Suggestion</string>
    <string name="test_description">Typically composed of a single espresso shot and hot milk, with the surface topped with foamed milk. The top third of the drink consists of milk foam; this foam can be decorated with artistic drawings made...</string>
    <string name="juice">Juice</string>
    <string name="milk_tea">Milk tea</string>
    <string name="camera">Camera</string>
    <string name="voucher_name">OFF 50% - HAPPY FRIYAY!</string>
    <string name="voucher_description">Orders from %1$s VND</string>
    <string name="product_price">%1$s VND</string>
    <string name="check_all">Check all</string>
    <string name="milk_shake">Milk shake</string>
    <string name="pasty">Pasty</string>
    <string name="all">All</string>
    <string name="for_you">For you</string>
    <string name="not_receive_info">"Không nhận được thông tin"</string>
    <string name="not_receive_info_err">"Không gởi được yêu cầu vui lòng kiểm tra lại"</string>
    <string name="product_quantity">%1$s items</string>
    <string name="status">\u0020- %1$s</string>
    <string name="order_id">Order ID: %1$s</string>
    <string name="use_coin">[-%1$d]</string>
    <string name="jolie_coin_detail">-%1$d VND</string>
    <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
    <string name="bill_review">Bill review</string>
    <string name="rating">Rating</string>
    <string name="how_do_you_feel_about_the_bill">How do you feel about the bill?</string>
    <string name="comment">Comment</string>
    <string name="size">Size:</string>

</resources>