<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nt118.joliecafe.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.nt118.joliecafe.ui.fragments.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.nt118.joliecafe.ui.fragments.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.nt118.joliecafe.ui.fragments.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_profileActivity"
            app:destination="@id/profileActivity" />
    </fragment>
    <activity
        android:id="@+id/profileActivity"
        android:name="com.nt118.joliecafe.ui.activities.profile.ProfileActivity"
        android:label="activity_profile"
        tools:layout="@layout/activity_profile" >
        <argument
            android:name="user"
            app:argType="com.nt118.joliecafe.models.User" />
        <argument
            android:name="isFaceOrGGLogin"
            app:argType="boolean"
            android:defaultValue="false" />
    </activity>
</navigation>