<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="22dp"
    tools:context=".ui.activities.order_detail.OrderDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btn_nav_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="-14dp"
                android:src="@drawable/ic_arrow_back"
                android:backgroundTint="#00000000"
                android:layout_marginEnd="18dp"
                app:tint="@color/text_color"
                android:contentDescription="@string/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BigText"
                android:text="@string/your_order_is_on_the_way"
                android:textColor="@color/text_color_2"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="none">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingVertical="22dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/map_container"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="9dp">
                <androidx.fragment.app.FragmentContainerView
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:id="@+id/map"
                    android:nestedScrollingEnabled="true"
                    app:uiRotateGestures="true" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_distance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/map_container"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="36dp"
                style="@style/RegularText2"
                android:text="@string/distance"/>

            <TextView
                android:id="@+id/tv_distance_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_distance_label"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/RegularNumber2"
                android:text="@string/distance_left"/>

            <TextView
                android:id="@+id/tv_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_distance_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                style="@style/RegularText2"
                android:text="@string/time_estimate"/>

            <TextView
                android:id="@+id/tv_time_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_time_label"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/RegularNumber2"
                android:text="@string/time_left"/>

            <TextView
                android:id="@+id/tv_suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_time_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="38dp"
                style="@style/RegularText"
                android:text="@string/suggestion"
                android:layout_marginBottom="15dp"
                android:textColor="@color/text_color_2"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart_suggestion"
                app:layout_constraintTop_toBottomOf="@id/tv_suggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_cart_suggestion" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>