<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="406dp"
    android:layout_height="wrap_content"
    tools:context=".ui.activities.checkout.VoucherDialog"
    android:background="@drawable/rounded_shape"
    android:paddingVertical="18dp"
    android:backgroundTint="@color/grey_opacity60_primary">

    <EditText
        android:id="@+id/et_voucher_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.67"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/grey_primary"
        android:hint="@string/enter_a_voucher"
        android:textColorHint="@color/hint_color"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_marginStart="18dp"
        style="@style/RegularText2"
        android:padding="14dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_apply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/et_voucher_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_voucher_code"
        app:layout_constraintBottom_toBottomOf="@id/et_voucher_code"
        app:cardCornerRadius="9dp"
        android:layout_marginHorizontal="18dp"
        android:backgroundTint="@color/grey_primary_variant">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RegularText2"
            android:text="@string/apply"
            android:layout_gravity="center"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_discount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_voucher_code"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/RegularText2"
        android:text="@string/discount"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginStart="18dp"
        tools:listitem="@layout/item_voucher"
        tools:itemCount="3"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_discount_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/rv_discount"/>


    <TextView
        android:id="@+id/tv_free_ship_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/RegularText2"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:text="@string/free_ship"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_free_ship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginStart="18dp"
        tools:listitem="@layout/item_voucher"
        tools:itemCount="3"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_free_ship_label"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>